# GAIA-ToolBench

./: .env.template  .gitignore  Dockerfile  README.md  app.py  manage.py  pyproject.toml  requirements.txt
LLM/: APIcallwithattachments.py  OpenAIcalls.py  data.csv  data.json  data.xml  responses.txt
TestCases/: Filesystemtestcases.py  test_openai_utils.py
architecture/: Assignment1-Diagram1.drawio.drawio  generate_diagrams.py  model1.py
dataset_setup/: data_loader.py  download_attachments.py  load_database.py  scraper.py  upload_attachments.py
dataset_setup/models/: operations_log.py  test_cases.py
llm_utils/: file_system_utils.py  openai_utils.py
models/: __init__.py  benchmark_results.py  db.py  operations_log.py  test_cases.py
pages/: home.py  reports.py  test_case.py
scraper/: scraper.py
streamlit/: app.py
tests/: test_file_system_utils.py
utils/: file_system_utils.py  openai_utils.py  s3.py
