[project]
name = "assignment1"
version = "0.1.0"
description = "Assignment 1 for DAMG 7245"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
packages = [
    { include = "architecture" }
]

[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"
datasets = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "architecture.generate_diagrams"
